# Registration_form

./: .gitignore  Commands.txt  README.md  app.py  config_3_4.json  config_example.json  pyproject.toml  readme_z_gpt_do_przerobienia.txt
app/: __init__.py
templates/: index.html
